# problems

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
contests/cses/001-introductory-problems/001-weird-algorithm/: 001-weird-algorithm.py
contests/cses/001_introductory_problems/001_weird_algorithm/: 001_weird_algorithm.py
contests/cses/001_introductory_problems/002_missing_number/: 002_missing_number.py
contests/cses/001_introductory_problems/003_repetitions/: 003_repetitions.py  analysis.txt
contests/cses/001_introductory_problems/004_increasing_array/: 004_increasing_array.py  analysis.txt
contests/cses/001_introductory_problems/005_permutations/: 005_permutations.py
contests/cses/001_introductory_problems/008_two_sets/: 008_two_sets.py  analysis.txt
core/linear/c/analysis/: singly_linked_list.txt
core/sorting/c/: BubbleSort.c  BubbleSortEarlyExit.c  InsertionSort.c
core/sorting/c/.analysis/: .bubble_sort.txt  .bubble_sort_early_exit.txt  .insertion_sort.txt
foundations/pointers/c/: ReverseStringInPlace.c
foundations/recursion/haskell/: ReverseListNaive.hs
foundations/recursion/haskell/analysis/: reverse_list_naive.txt
problems/codeforces/2218B_the_67th_6-7_integer_problem/: 2218B_the_67th_6-7_integer_problem.py  analysis.txt
problems/cses/001_introductory_problems/001_weird_algorithm/: analysis.txt
problems/cses/001_introductory_problems/002_missing_number/: analysis.txt
problems/cses/001_introductory_problems/003_repetitions/: 003_repetitions.py
scripts/: context.sh  delta.sh  snapshot.sh
(+11 files in other folders)
